Bug 6037 - inconsistency between kbdcontrol(1) and syscons device driver.
Summary: inconsistency between kbdcontrol(1) and syscons device driver.
Status: Closed FIXED
Alias: None
Product: Base System
Classification: Unclassified
Component: bin (show other bugs)
Version: 2.1.5-RELEASE
Hardware: Any Any
: Normal Affects Only Me
Assignee: freebsd-bugs (Nobody)
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 1998-03-17 00:50 UTC by kh
Modified: 1998-08-03 10:21 UTC (History)
0 users

See Also:


Attachments
file.diff (625 bytes, patch)
1998-03-17 00:50 UTC, kh
no flags Details | Diff
file.diff (550 bytes, patch)
1998-03-17 00:50 UTC, kh
no flags Details | Diff
file.diff (839 bytes, patch)
1998-03-17 00:50 UTC, kh
no flags Details | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description kh 1998-03-17 00:50:03 UTC
Current kbdcontrol(1) manual has not enough information to set
bel duration and pitch.  Here is a possible patch to /usr/shar/
man/man1/kbdcontrol.1.

*** ORGkbdcontrol.1	Tue Mar 17 08:37:25 1998
--- /usr/shar/man/man1/kbdcontrol.1	Tue Mar 17 08:47:45 1998
***************
*** 37,43 ****
  The following command line options are supported:
  .Bl -tag -width indent
  .It Fl b Ar duration.pitch | Ar belltype
! Set the bell duration and pitch values. 
  If a 
  .Ar belltype
  argument is specified, it may be one of 
--- 37,43 ----
  The following command line options are supported:
  .Bl -tag -width indent
  .It Fl b Ar duration.pitch | Ar belltype
! Set the bell duration in 1/10 seconds and pitch in 838.1 nanoseconds. 
  If a 
  .Ar belltype
  argument is specified, it may be one of

Fix: But there is inconsistency between kbdcontrol(1) and syscons device
drive as for their default value.

                                bell duration
-----------------------------------------------
/sys/i386/isa/syscons.c          50 miliseconds
/usr/src/usr.sbin/kbdcontrol.c  100 miliseconds


Perhaps more reasonable way is changing unit of pitch and duration
to in hertz (pitch) and miliseconds (duration) as follow.
Comment 1 yokota freebsd_committer freebsd_triage 1998-08-03 10:20:46 UTC
State Changed
From-To: open->closed

Fixed in syscons.c 1.268 and kbdcontrol.c 1.15.