- Set bell pitch in hertz and duration in msecs.   The change corresponds to syscons.c 1.268.

PR: bin/6037
Submitted by: Kouichi Hirabayashi (kh@eve.mogami-wire.co.jp)